projects/style.css
:root {
    --rt-color-white: #fff;
    --rt-color-white-sec: #838383;
    --rt-color-dark: #0D0D0D;
    --rt-color-dark-sec: #161616;
    --rt-color-dark-third: #1E1E1E;
    --rt-color-success: #8dc572;
    --rt-color-error: #be6464;
    --rt-color-warning: #f0ad4e;
    --rt-color-info: #337ab7;
    --rt-opacity: 0.9;
}

body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
    margin: 0;
    padding: 0;
    background-color: var(--rt-color-dark);
    color: var(--rt-color-white);
}

h1 {
    text-align: center;
    padding: 20px 0;
}

.project-list {
    list-style: none;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: auto;
}

.project {
    display: flex;
    align-items: flex-start;
    margin: 10px 0;
    padding: 10px;
    border: 1px solid var(--rt-color-dark);
    border-radius: 5px;
    background-color: var(--rt-color-dark);
    width: 700px;
    transition: background-color 0.3s, filter 0.3s;
}

@media (max-width: 800px) {
    .project {
        display: flex;
        align-items: flex-start;
        margin: 10px 0;
        padding: 10px;
        border: 1px solid var(--rt-color-dark);
        border-radius: 5px;
        background-color: var(--rt-color-dark);
        width: 700px;
        transition: background-color 0.3s, filter 0.3s;
        flex-direction: column;
        max-width: 70%;
    }


}

.project:hover {
    background-color: var(--rt-color-dark-sec);
}

.project-image {
    width: 150px;
    height: 150px;
    object-fit: cover;
    margin-right: 20px;
    border-radius: 10px;
    overflow: hidden;
}

.project-content {
    min-height: 150px;
    max-height: 500px;
    align-self: flex-start;
    flex: 1;
}

.project h2 {
    margin: 0;
    padding: 0;
    font-size: 24px;
}

.project p {
    margin: 10px 0;
    padding: 0;
    font-size: 16px;
}

.project-footer {
    flex: 1;
    display: flex;
    justify-content: space-between;
}

.owner-avatars,
.tags {
    display: flex;
    align-items: center;
    padding: 0;
    margin: 0;
    list-style: none;
}

.owner-avatars li,
.tags li {
    margin-right: 10px;
}

.owner-avatars img {
    width: 30px;
    height: 30px;
    object-fit: cover;
    border-radius: 50%;
}

.tags span {
    padding: 5px 10px;
    background-color: var(--rt-color-dark-third);
    color: var(--rt-color-white-sec);
    border-radius: 20px;
}

.more {
    text-align: center;
    color: var(--rt-color-white-sec);
}

header {
    color: #fff;
    padding: 20px 0;
}

.nav-container {
    list-style: none;
    display: flex;
    justify-content: center;
    margin: 0;
    padding: 0;
}

.nav-container li {
    margin: 0 15px;
}

.nav-container a {
    text-decoration: none;
    color: #fff;
}

